[project]
name = "blaidd"
version = "0.1.0"
description = "Helper to color scatterplots with labels"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "narwhals>=2.1.1",
    "numpy>=2.3.2",
    "polars>=1.31.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.3",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "blaidd._rblaidd"
features = ["pyo3/extension-module"]
